@@ -1,3 +1,4 @@
+(INTERNAL) Port sn_wait_dialog to use sn_ttk_buttons
 (ENHANCE) Port the "About" dialog to Ttk
 (BUGFIX) Forgot that someone may want to resize the "Abbreviations" dialog
 (ENHANCE) Port the "Abbreviations" dialog to Ttk, now with scrollbar
